# numeract

./: .gitignore  Dockerfile  README.md  db.example.env  docker-compose.yml  pyproject.toml  requirements.txt  table.sql
app/: main.py
app/worker/: celery_app.py  celery_worker.py
app/worker/read/: read_data.py
python/: read_data.py
