[tool.poetry]
name = "numeract-test"
version = "0.1.0"
description = ""
authors = ["Tiric Ciprian"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.8.3"
fastapi = "^0.60.1"
hypercorn = "^0.10.2"
celery = "^4.4.6"
redis = "^3.5.3"
numpy = "^1.19.5"
pandas = "^1.1.5"
psycopg2 = "^2.8.6"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
six = "^1.16.0"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
